assets/css/components/markdown/typography.css
p {
  @apply w-full leading-relaxed;

  code {
    @apply text-nowrap;
  }

  &:not(:last-child) {
    @apply mb-6;
  }
}

dl,
ul,
ol {
  @apply w-full self-start mb-6;

  li {
    @apply break-words mt-2.5 pl-1.5;

    &:first-child {
      @apply mt-0;
    }
  }
}

ol {
  @apply list-decimal pl-10;
}

ul {
  @apply list-disc pl-10;
}

pre {
  @apply w-full rounded-md p-4 overflow-x-scroll;
  @apply print:border-neutral-800 print:p-2 mb-6;

  @apply text-[#4c4f69] dark:text-[#cdd6f4];
  @apply bg-[#fcfcfc] dark:bg-[#1e1e2e];

  code {
    @apply font-mono text-base leading-snug;
  }
}

a:not(.plain):not(.heading-anchor) {
  @apply underline;
  @apply text-blue-700 hover:text-blue-800;
  @apply dark:text-blue-400 dark:hover:text-blue-300;
  @apply transition-colors;
}

a.heading-anchor {
  @apply opacity-25 ml-2 hover:opacity-100;
  @apply no-underline;
  @apply transition-opacity;
}

.footnote {
  @apply mb-6 flex flex-row gap-1 text-base text-gray-500 dark:text-gray-400;

  &:has(+ .footnote) {
    @apply mb-0;
  }

  div.footnote-index {
    @apply leading-relaxed mr-2;

    &:after {
      content: ".";
    }
  }

  p {
    &:last-child {
      @apply mb-0;
    }
  }
}

summary {
  @apply cursor-pointer font-bold bg-neutral-100 dark:bg-neutral-800 p-4 rounded-t-md rounded-b-md;
}

details[open] {
  summary {
    @apply rounded-b-none;
  }

  > figure pre, > div.highlight pre {
    @apply rounded-t-none;
  }
}

blockquote {
  @apply w-full mb-6 border-l-4 border-l-blue-400 px-8;

  p {
    @apply italic text-neutral-600 dark:text-neutral-400;

    &:last-child {
      @apply mb-0;
    }
  }
}

